--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+gunicorn = "*"
+flask = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
-gunicorn
-flask
